src/frontend/src/lib/filter-query-editor/generated/FiltersParser.ts
// @ts-nocheck
/* eslint-disable */

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { FiltersListener } from "./FiltersListener.js";
import { FiltersVisitor } from "./FiltersVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export class FiltersParser extends antlr.Parser {
  public static readonly FIELD = 1;
  public static readonly STRING = 2;
  public static readonly CONTAINS = 3;
  public static readonly GREATER = 4;
  public static readonly STARTS = 5;
  public static readonly EQUALS = 6;
  public static readonly EQUAL = 7;
  public static readonly BLANK = 8;
  public static readonly LESS = 9;
  public static readonly THAN = 10;
  public static readonly ENDS = 11;
  public static readonly WITH = 12;
  public static readonly NOT = 13;
  public static readonly OR = 14;
  public static readonly IS = 15;
  public static readonly AND = 16;
  public static readonly TRUE = 17;
  public static readonly FALSE = 18;
  public static readonly LPAREN = 19;
  public static readonly RPAREN = 20;
  public static readonly EQ = 21;
  public static readonly EQ2 = 22;
  public static readonly NEQ = 23;
  public static readonly GT = 24;
  public static readonly GE = 25;
  public static readonly LT = 26;
  public static readonly LE = 27;
  public static readonly DOT = 28;
  public static readonly SIGN = 29;
  public static readonly DIGITS = 30;
  public static readonly WS = 31;
  public static readonly RULE_formula = 0;
  public static readonly RULE_expr = 1;
  public static readonly RULE_orExpr = 2;
  public static readonly RULE_andExpr = 3;
  public static readonly RULE_unaryExpr = 4;
  public static readonly RULE_primary = 5;
  public static readonly RULE_group = 6;
  public static readonly RULE_comparison = 7;
  public static readonly RULE_textOperation = 8;
  public static readonly RULE_existenceOperation = 9;
  public static readonly RULE_fieldRef = 10;
  public static readonly RULE_fieldIdentifier = 11;
  public static readonly RULE_compOp = 12;
  public static readonly RULE_textOp = 13;
  public static readonly RULE_operand = 14;
  public static readonly RULE_booleanLiteral = 15;
  public static readonly RULE_number = 16;
  public static readonly RULE_stringLiteral = 17;

  public static readonly literalNames = [
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    "'('",
    "')'",
    "'='",
    "'=='",
    "'!='",
    "'>'",
    "'>='",
    "'<'",
    "'<='",
    "'.'",
  ];

  public static readonly symbolicNames = [
    null,
    "FIELD",
    "STRING",
    "CONTAINS",
    "GREATER",
    "STARTS",
    "EQUALS",
    "EQUAL",
    "BLANK",
    "LESS",
    "THAN",
    "ENDS",
    "WITH",
    "NOT",
    "OR",
    "IS",
    "AND",
    "TRUE",
    "FALSE",
    "LPAREN",
    "RPAREN",
    "EQ",
    "EQ2",
    "NEQ",
    "GT",
    "GE",
    "LT",
    "LE",
    "DOT",
    "SIGN",
    "DIGITS",
    "WS",
  ];
  public static readonly ruleNames = [
    "formula",
    "expr",
    "orExpr",
    "andExpr",
    "unaryExpr",
    "primary",
    "group",
    "comparison",
    "textOperation",
    "existenceOperation",
    "fieldRef",
    "fieldIdentifier",
    "compOp",
    "textOp",
    "operand",
    "booleanLiteral",
    "number",
    "stringLiteral",
  ];

  public get grammarFileName(): string {
    return "Filters.g4";
  }
  public get literalNames(): (string | null)[] {
    return FiltersParser.literalNames;
  }
  public get symbolicNames(): (string | null)[] {
    return FiltersParser.symbolicNames;
  }
  public get ruleNames(): string[] {
    return FiltersParser.ruleNames;
  }
  public get serializedATN(): number[] {
    return FiltersParser._serializedATN;
  }

  protected createFailedPredicateException(
    predicate?: string,
    message?: string,
  ): antlr.FailedPredicateException {
    return new antlr.FailedPredicateException(this, predicate, message);
  }

  public constructor(input: antlr.TokenStream) {
    super(input);
    this.interpreter = new antlr.ParserATNSimulator(
      this,
      FiltersParser._ATN,
      FiltersParser.decisionsToDFA,
      new antlr.PredictionContextCache(),
    );
  }
  public formula(): FormulaContext {
    let localContext = new FormulaContext(this.context, this.state);
    this.enterRule(localContext, 0, FiltersParser.RULE_formula);
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 36;
        this.expr();
        this.state = 37;
        this.match(FiltersParser.EOF);
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public expr(): ExprContext {
    let localContext = new ExprContext(this.context, this.state);
    this.enterRule(localContext, 2, FiltersParser.RULE_expr);
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 39;
        this.orExpr();
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public orExpr(): OrExprContext {
    let localContext = new OrExprContext(this.context, this.state);
    this.enterRule(localContext, 4, FiltersParser.RULE_orExpr);
    let _la: number;
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 41;
        this.andExpr();
        this.state = 46;
        this.errorHandler.sync(this);
        _la = this.tokenStream.LA(1);
        while (_la === 14) {
          {
            {
              this.state = 42;
              this.match(FiltersParser.OR);
              this.state = 43;
              this.andExpr();
            }
          }
          this.state = 48;
          this.errorHandler.sync(this);
          _la = this.tokenStream.LA(1);
        }
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public andExpr(): AndExprContext {
    let localContext = new AndExprContext(this.context, this.state);
    this.enterRule(localContext, 6, FiltersParser.RULE_andExpr);
    let _la: number;
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 49;
        this.unaryExpr();
        this.state = 54;
        this.errorHandler.sync(this);
        _la = this.tokenStream.LA(1);
        while (_la === 16) {
          {
            {
              this.state = 50;
              this.match(FiltersParser.AND);
              this.state = 51;
              this.unaryExpr();
            }
          }
          this.state = 56;
          this.errorHandler.sync(this);
          _la = this.tokenStream.LA(1);
        }
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public unaryExpr(): UnaryExprContext {
    let localContext = new UnaryExprContext(this.context, this.state);
    this.enterRule(localContext, 8, FiltersParser.RULE_unaryExpr);
    try {
      this.state = 60;
      this.errorHandler.sync(this);
      switch (this.tokenStream.LA(1)) {
        case FiltersParser.NOT:
          this.enterOuterAlt(localContext, 1);
          {
            this.state = 57;
            this.match(FiltersParser.NOT);
            this.state = 58;
            this.unaryExpr();
          }
          break;
        case FiltersParser.FIELD:
        case FiltersParser.LPAREN:
          this.enterOuterAlt(localContext, 2);
          {
            this.state = 59;
            this.primary();
          }
          break;
        default:
          throw new antlr.NoViableAltException(this);
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public primary(): PrimaryContext {
    let localContext = new PrimaryContext(this.context, this.state);
    this.enterRule(localContext, 10, FiltersParser.RULE_primary);
    try {
      this.state = 66;
      this.errorHandler.sync(this);
      switch (this.interpreter.adaptivePredict(this.tokenStream, 3, this.context)) {
        case 1:
          this.enterOuterAlt(localContext, 1);
          {
            this.state = 62;
            this.group();
          }
          break;
        case 2:
          this.enterOuterAlt(localContext, 2);
          {
            this.state = 63;
            this.comparison();
          }
          break;
        case 3:
          this.enterOuterAlt(localContext, 3);
          {
            this.state = 64;
            this.textOperation();
          }
          break;
        case 4:
          this.enterOuterAlt(localContext, 4);
          {
            this.state = 65;
            this.existenceOperation();
          }
          break;
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public group(): GroupContext {
    let localContext = new GroupContext(this.context, this.state);
    this.enterRule(localContext, 12, FiltersParser.RULE_group);
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 68;
        this.match(FiltersParser.LPAREN);
        this.state = 69;
        this.expr();
        this.state = 70;
        this.match(FiltersParser.RPAREN);
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public comparison(): ComparisonContext {
    let localContext = new ComparisonContext(this.context, this.state);
    this.enterRule(localContext, 14, FiltersParser.RULE_comparison);
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 72;
        this.fieldRef();
        this.state = 73;
        this.compOp();
        this.state = 74;
        this.operand();
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public textOperation(): TextOperationContext {
    let localContext = new TextOperationContext(this.context, this.state);
    this.enterRule(localContext, 16, FiltersParser.RULE_textOperation);
    try {
      this.state = 85;
      this.errorHandler.sync(this);
      switch (this.interpreter.adaptivePredict(this.tokenStream, 4, this.context)) {
        case 1:
          this.enterOuterAlt(localContext, 1);
          {
            this.state = 76;
            this.fieldRef();
            this.state = 77;
            this.textOp();
            this.state = 78;
            this.stringLiteral();
          }
          break;
        case 2:
          this.enterOuterAlt(localContext, 2);
          {
            this.state = 80;
            this.fieldRef();
            this.state = 81;
            this.match(FiltersParser.NOT);
            this.state = 82;
            this.textOp();
            this.state = 83;
            this.stringLiteral();
          }
          break;
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public existenceOperation(): ExistenceOperationContext {
    let localContext = new ExistenceOperationContext(this.context, this.state);
    this.enterRule(localContext, 18, FiltersParser.RULE_existenceOperation);
    try {
      this.state = 96;
      this.errorHandler.sync(this);
      switch (this.interpreter.adaptivePredict(this.tokenStream, 5, this.context)) {
        case 1:
          this.enterOuterAlt(localContext, 1);
          {
            this.state = 87;
            this.fieldRef();
            this.state = 88;
            this.match(FiltersParser.IS);
            this.state = 89;
            this.match(FiltersParser.BLANK);
          }
          break;
        case 2:
          this.enterOuterAlt(localContext, 2);
          {
            this.state = 91;
            this.fieldRef();
            this.state = 92;
            this.match(FiltersParser.IS);
            this.state = 93;
            this.match(FiltersParser.NOT);
            this.state = 94;
            this.match(FiltersParser.BLANK);
          }
          break;
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public fieldRef(): FieldRefContext {
    let localContext = new FieldRefContext(this.context, this.state);
    this.enterRule(localContext, 20, FiltersParser.RULE_fieldRef);
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 98;
        this.match(FiltersParser.FIELD);
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public fieldIdentifier(): FieldIdentifierContext {
    let localContext = new FieldIdentifierContext(this.context, this.state);
    this.enterRule(localContext, 22, FiltersParser.RULE_fieldIdentifier);
    try {
      this.enterOuterAlt(localContext, 1);
      // tslint:disable-next-line:no-empty
      {
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public compOp(): CompOpContext {
    let localContext = new CompOpContext(this.context, this.state);
    this.enterRule(localContext, 24, FiltersParser.RULE_compOp);
    try {
      this.state = 126;
      this.errorHandler.sync(this);
      switch (this.interpreter.adaptivePredict(this.tokenStream, 6, this.context)) {
        case 1:
          this.enterOuterAlt(localContext, 1);
          {
            this.state = 102;
            this.match(FiltersParser.EQ);
          }
          break;
        case 2:
          this.enterOuterAlt(localContext, 2);
          {
            this.state = 103;
            this.match(FiltersParser.EQ2);
          }
          break;
        case 3:
          this.enterOuterAlt(localContext, 3);
          {
            this.state = 104;
            this.match(FiltersParser.NEQ);
          }
          break;
        case 4:
          this.enterOuterAlt(localContext, 4);
          {
            this.state = 105;
            this.match(FiltersParser.GT);
          }
          break;
        case 5:
          this.enterOuterAlt(localContext, 5);
          {
            this.state = 106;
            this.match(FiltersParser.GE);
          }
          break;
        case 6:
          this.enterOuterAlt(localContext, 6);
          {
            this.state = 107;
            this.match(FiltersParser.LT);
          }
          break;
        case 7:
          this.enterOuterAlt(localContext, 7);
          {
            this.state = 108;
            this.match(FiltersParser.LE);
          }
          break;
        case 8:
          this.enterOuterAlt(localContext, 8);
          {
            this.state = 109;
            this.match(FiltersParser.EQUALS);
          }
          break;
        case 9:
          this.enterOuterAlt(localContext, 9);
          {
            this.state = 110;
            this.match(FiltersParser.NOT);
            this.state = 111;
            this.match(FiltersParser.EQUALS);
          }
          break;
        case 10:
          this.enterOuterAlt(localContext, 10);
          {
            this.state = 112;
            this.match(FiltersParser.NOT);
            this.state = 113;
            this.match(FiltersParser.EQUAL);
          }
          break;
        case 11:
          this.enterOuterAlt(localContext, 11);
          {
            this.state = 114;
            this.match(FiltersParser.GREATER);
            this.state = 115;
            this.match(FiltersParser.THAN);
          }
          break;
        case 12:
          this.enterOuterAlt(localContext, 12);
          {
            this.state = 116;
            this.match(FiltersParser.GREATER);
            this.state = 117;
            this.match(FiltersParser.THAN);
            this.state = 118;
            this.match(FiltersParser.OR);
            this.state = 119;
            this.match(FiltersParser.EQUAL);
          }
          break;
        case 13:
          this.enterOuterAlt(localContext, 13);
          {
            this.state = 120;
            this.match(FiltersParser.LESS);
            this.state = 121;
            this.match(FiltersParser.THAN);
          }
          break;
        case 14:
          this.enterOuterAlt(localContext, 14);
          {
            this.state = 122;
            this.match(FiltersParser.LESS);
            this.state = 123;
            this.match(FiltersParser.THAN);
            this.state = 124;
            this.match(FiltersParser.OR);
            this.state = 125;
            this.match(FiltersParser.EQUAL);
          }
          break;
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public textOp(): TextOpContext {
    let localContext = new TextOpContext(this.context, this.state);
    this.enterRule(localContext, 26, FiltersParser.RULE_textOp);
    try {
      this.state = 133;
      this.errorHandler.sync(this);
      switch (this.tokenStream.LA(1)) {
        case FiltersParser.CONTAINS:
          this.enterOuterAlt(localContext, 1);
          {
            this.state = 128;
            this.match(FiltersParser.CONTAINS);
          }
          break;
        case FiltersParser.STARTS:
          this.enterOuterAlt(localContext, 2);
          {
            this.state = 129;
            this.match(FiltersParser.STARTS);
            this.state = 130;
            this.match(FiltersParser.WITH);
          }
          break;
        case FiltersParser.ENDS:
          this.enterOuterAlt(localContext, 3);
          {
            this.state = 131;
            this.match(FiltersParser.ENDS);
            this.state = 132;
            this.match(FiltersParser.WITH);
          }
          break;
        default:
          throw new antlr.NoViableAltException(this);
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public operand(): OperandContext {
    let localContext = new OperandContext(this.context, this.state);
    this.enterRule(localContext, 28, FiltersParser.RULE_operand);
    try {
      this.state = 138;
      this.errorHandler.sync(this);
      switch (this.tokenStream.LA(1)) {
        case FiltersParser.SIGN:
        case FiltersParser.DIGITS:
          this.enterOuterAlt(localContext, 1);
          {
            this.state = 135;
            this.number_();
          }
          break;
        case FiltersParser.STRING:
          this.enterOuterAlt(localContext, 2);
          {
            this.state = 136;
            this.stringLiteral();
          }
          break;
        case FiltersParser.TRUE:
        case FiltersParser.FALSE:
          this.enterOuterAlt(localContext, 3);
          {
            this.state = 137;
            this.booleanLiteral();
          }
          break;
        default:
          throw new antlr.NoViableAltException(this);
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public booleanLiteral(): BooleanLiteralContext {
    let localContext = new BooleanLiteralContext(this.context, this.state);
    this.enterRule(localContext, 30, FiltersParser.RULE_booleanLiteral);
    let _la: number;
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 140;
        _la = this.tokenStream.LA(1);
        if (!(_la === 17 || _la === 18)) {
          this.errorHandler.recoverInline(this);
        } else {
          this.errorHandler.reportMatch(this);
          this.consume();
        }
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public number_(): NumberContext {
    let localContext = new NumberContext(this.context, this.state);
    this.enterRule(localContext, 32, FiltersParser.RULE_number);
    let _la: number;
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 143;
        this.errorHandler.sync(this);
        _la = this.tokenStream.LA(1);
        if (_la === 29) {
          {
            this.state = 142;
            this.match(FiltersParser.SIGN);
          }
        }

        this.state = 145;
        this.match(FiltersParser.DIGITS);
        this.state = 148;
        this.errorHandler.sync(this);
        _la = this.tokenStream.LA(1);
        if (_la === 28) {
          {
            this.state = 146;
            this.match(FiltersParser.DOT);
            this.state = 147;
            this.match(FiltersParser.DIGITS);
          }
        }
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public stringLiteral(): StringLiteralContext {
    let localContext = new StringLiteralContext(this.context, this.state);
    this.enterRule(localContext, 34, FiltersParser.RULE_stringLiteral);
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 150;
        this.match(FiltersParser.STRING);
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }


  private static __ATN: antlr.ATN;
  public static get _ATN(): antlr.ATN {
    if (!FiltersParser.__ATN) {
      FiltersParser.__ATN = new antlr.ATNDeserializer().deserialize(FiltersParser._serializedATN);
    }

    return FiltersParser.__ATN;
  }

  private static readonly vocabulary = new antlr.Vocabulary(
    FiltersParser.literalNames,
    FiltersParser.symbolicNames,
    [],
  );

  public override get vocabulary(): antlr.Vocabulary {
    return FiltersParser.vocabulary;
  }

  private static readonly decisionsToDFA = FiltersParser._ATN.decisionToState.map(
    (ds: antlr.DecisionState, index: number) => new antlr.DFA(ds, index),
  );
}

export class FormulaContext extends antlr.ParserRuleContext {
  public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
    super(parent, invokingState);
  }
  public expr(): ExprContext {
    return this.getRuleContext(0, ExprContext)!;
  }
  public EOF(): antlr.TerminalNode {
    return this.getToken(FiltersParser.EOF, 0)!;
  }
  public override get ruleIndex(): number {
    return FiltersParser.RULE_formula;
  }
  public override enterRule(listener: FiltersListener): void {
    if (listener.enterFormula) {
      listener.enterFormula(this);
    }
  }
  public override exitRule(listener: FiltersListener): void {
    if (listener.exitFormula) {
      listener.exitFormula(this);
    }
  }
  public override accept<Result>(visitor: FiltersVisitor<Result>): Result | null {
    if (visitor.visitFormula) {
      return visitor.visitFormula(this);
    } else {
      return visitor.visitChildren(this);
    }
  }
}

export class ExprContext extends antlr.ParserRuleContext {
  public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
    super(parent, invokingState);
  }
  public orExpr(): OrExprContext {
    return this.getRuleContext(0, OrExprContext)!;
  }
  public override get ruleIndex(): number {
    return FiltersParser.RULE_expr;
  }
  public override enterRule(listener: FiltersListener): void {
    if (listener.enterExpr) {
      listener.enterExpr(this);
    }
  }
  public override exitRule(listener: FiltersListener): void {
    if (listener.exitExpr) {
      listener.exitExpr(this);
    }
  }
  public override accept<Result>(visitor: FiltersVisitor<Result>): Result | null {
    if (visitor.visitExpr) {
      return visitor.visitExpr(this);
    } else {
      return visitor.visitChildren(this);
    }
  }
}

export class OrExprContext extends antlr.ParserRuleContext {
  public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
    super(parent, invokingState);
  }
  public andExpr(): AndExprContext[];
  public andExpr(i: number): AndExprContext | null;
  public andExpr(i?: number): AndExprContext[] | AndExprContext | null {
    if (i === undefined) {
      return this.getRuleContexts(AndExprContext);
    }

    return this.getRuleContext(i, AndExprContext);
  }
  public OR(): antlr.TerminalNode[];
  public OR(i: number): antlr.TerminalNode | null;
  public OR(i?: number): antlr.TerminalNode | null | antlr.TerminalNode[] {
    if (i === undefined) {
      return this.getTokens(FiltersParser.OR);
    } else {
      return this.getToken(FiltersParser.OR, i);
    }
  }
  public override get ruleIndex(): number {
    return FiltersParser.RULE_orExpr;
  }
  public override enterRule(listener: FiltersListener): void {
    if (listener.enterOrExpr) {
      listener.enterOrExpr(this);
    }
  }
  public override exitRule(listener: FiltersListener): void {
    if (listener.exitOrExpr) {
      listener.exitOrExpr(this);
    }
  }
  public override accept<Result>(visitor: FiltersVisitor<Result>): Result | null {
    if (visitor.visitOrExpr) {
      return visitor.visitOrExpr(this);
    } else {
      return visitor.visitChildren(this);
    }
  }
}

export class AndExprContext extends antlr.ParserRuleContext {
  public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
    super(parent, invokingState);
  }
  public unaryExpr(): UnaryExprContext[];
  public unaryExpr(i: number): UnaryExprContext | null;
  public unaryExpr(i?: number): UnaryExprContext[] | UnaryExprContext | null {
    if (i === undefined) {
      return this.getRuleContexts(UnaryExprContext);
    }

    return this.getRuleContext(i, UnaryExprContext);
  }
  public AND(): antlr.TerminalNode[];
  public AND(i: number): antlr.TerminalNode | null;
  public AND(i?: number): antlr.TerminalNode | null | antlr.TerminalNode[] {
    if (i === undefined) {
      return this.getTokens(FiltersParser.AND);
    } else {
      return this.getToken(FiltersParser.AND, i);
    }
  }
  public override get ruleIndex(): number {
    return FiltersParser.RULE_andExpr;
  }
  public override enterRule(listener: FiltersListener): void {
    if (listener.enterAndExpr) {
      listener.enterAndExpr(this);
    }
  }
  public override exitRule(listener: FiltersListener): void {
    if (listener.exitAndExpr) {
      listener.exitAndExpr(this);
    }
  }
  public override accept<Result>(visitor: FiltersVisitor<Result>): Result | null {
    if (visitor.visitAndExpr) {
      return visitor.visitAndExpr(this);
    } else {
      return visitor.visitChildren(this);
    }
  }
}

export class UnaryExprContext extends antlr.ParserRuleContext {
  public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
    super(parent, invokingState);
  }
  public NOT(): antlr.TerminalNode | null {
    return this.getToken(FiltersParser.NOT, 0);
  }
  public unaryExpr(): UnaryExprContext | null {
    return this.getRuleContext(0, UnaryExprContext);
  }
  public primary(): PrimaryContext | null {
    return this.getRuleContext(0, PrimaryContext);
  }
  public override get ruleIndex(): number {
    return FiltersParser.RULE_unaryExpr;
  }
  public override enterRule(listener: FiltersListener): void {
    if (listener.enterUnaryExpr) {
      listener.enterUnaryExpr(this);
    }
  }
  public override exitRule(listener: FiltersListener): void {
    if (listener.exitUnaryExpr) {
      listener.exitUnaryExpr(this);
    }
  }
  public override accept<Result>(visitor: FiltersVisitor<Result>): Result | null {
    if (visitor.visitUnaryExpr) {
      return visitor.visitUnaryExpr(this);
    } else {
      return visitor.visitChildren(this);
    }
  }
}

export class PrimaryContext extends antlr.ParserRuleContext {
  public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
    super(parent, invokingState);
  }
  public group(): GroupContext | null {
    return this.getRuleContext(0, GroupContext);
  }
  public comparison(): ComparisonContext | null {
    return this.getRuleContext(0, ComparisonContext);
  }
  public textOperation(): TextOperationContext | null {
    return this.getRuleContext(0, TextOperationContext);
  }
  public existenceOperation(): ExistenceOperationContext | null {
    return this.getRuleContext(0, ExistenceOperationContext);
  }
  public override get ruleIndex(): number {
    return FiltersParser.RULE_primary;
  }
  public override enterRule(listener: FiltersListener): void {
    if (listener.enterPrimary) {
      listener.enterPrimary(this);
    }
  }
  public override exitRule(listener: FiltersListener): void {
    if (listener.exitPrimary) {
      listener.exitPrimary(this);
    }
  }
  public override accept<Result>(visitor: FiltersVisitor<Result>): Result | null {
    if (visitor.visitPrimary) {
      return visitor.visitPrimary(this);
    } else {
      return visitor.visitChildren(this);
    }
  }
}
